k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer 
  selector:
    app: nycolazsec-flask
  ports:
    - port: 8081 
      targetPort: 8000
